Job detail page re-refactor Fixed z-index conflict between modal dialog and summary slide-out.

--- a/awx/ui/static/less/ansible-ui.less
+++ b/awx/ui/static/less/ansible-ui.less
@@ -229,7 +229,7 @@ textarea.allowresize {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1999;
+  z-index: 1080;
   background-color: @black;
   opacity: 0;
 }
